# Analisis-Bosques-Murcia-App

./: .gitignore  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
20250306-CascadeResponse-Plottingflow/: index.html
codebase/data flow/: index.html
developer-guide/architecture/: index.html
docs/: 20250306-CascadeResponse-Plottingflow.md  Development Notes.md
docs/api/: models.md
docs/codebase/: MkDocs Guide.md  data flow.md  general flow.md
docs/en/: index.md
docs/en/developer-guide/: architecture.md
docs/en/user-guide/: getting-started.md
docs/es/: index.md
docs/es/user-guide/: getting-started.md
es/20250306-CascadeResponse-Plottingflow/: index.html
es/api/models/: index.html
es/codebase/MkDocs Guide/: index.html
es/user-guide/getting-started/: index.html
search/: search_index.json
site/: 404.html  sitemap.xml
site/Development Notes/: index.html
site/api/models/: index.html
site/codebase/MkDocs Guide/: index.html
site/codebase/general flow/: index.html
site/es/: index.html
site/es/Development Notes/: index.html
site/user-guide/getting-started/: index.html
src/: df_summary.html  main.py
src/bosques_app/: app.py
src/bosques_app/config/: __init__.py  app_info.yaml  app_settings.yaml  default_analysis.yaml  plot_features.yaml  settings.py  stations.csv  variables.yaml
src/bosques_app/controllers/: main_controller.py
src/bosques_app/models/: data_model.py  grammar_model.py  map_model.py  plot_model.py  task_queue_model.py  variables_model.py
src/bosques_app/ui/: main_window.py  (+3 more)
(+10 files in other folders)
